--- a/.github/workflows/xss-summary.yaml
+++ b/.github/workflows/xss-summary.yaml
@@ -25,8 +25,10 @@ jobs:
         chunk: [1, 2, 3, 4, 5, 6, 7, 8]
     steps:
       - name: Download combined results
-        uses: actions/download-artifact@v4
+        uses: dawidd6/action-download-artifact@v2
         with:
+          workflow: Parallel Bug Hunt - Part1
+          workflow_conclusion: success
           name: combined-results
           path: combined-results/
 
@@ -98,8 +100,10 @@ jobs:
         chunk: [1, 2, 3, 4]
     steps:
       - name: Download combined results
-        uses: actions/download-artifact@v4
+        uses: dawidd6/action-download-artifact@v2
         with:
+          workflow: Parallel Bug Hunt - Part1
+          workflow_conclusion: success
           name: combined-results
           path: combined-results/
 
@@ -225,216 +229,3 @@ jobs:
 
           # Combine all httpx results
           find . -name "httpx-results-*" -type d -exec cat {}/*.txt \; | grep '?' | sort -u > dynamic-alive.txt || true
-
-          if [[ -s "dynamic-alive.txt" ]] && [[ -s "combined-results/unfurl-params.txt" ]]; then
-            # Split for parallel processing
-            TOTAL_LINES=$(wc -l < dynamic-alive.txt)
-            LINES_PER_CHUNK=$((TOTAL_LINES / 4 + 1))
-            START_LINE=$((((${{ matrix.chunk }} - 1) * LINES_PER_CHUNK) + 1))
-            END_LINE=$((${{ matrix.chunk }} * LINES_PER_CHUNK))
-
-            sed -n "${START_LINE},${END_LINE}p" dynamic-alive.txt > x8-chunk-${{ matrix.chunk }}.txt
-            if [[ -s "x8-chunk-${{ matrix.chunk }}.txt" ]]; then
-              # Pass headers from inputs if available
-              if [[ -n "${{ github.event.inputs.headers }}" ]]; then
-                cat x8-chunk-${{ matrix.chunk }}.txt | xargs -P 4 -I{} x8 -u "{}" -w combined-results/unfurl-params.txt -X GET POST -H "${{ github.event.inputs.headers }}" > x8-results-${{ matrix.chunk }}/x8.txt || true
-              else
-                cat x8-chunk-${{ matrix.chunk }}.txt | xargs -P 4 -I{} x8 -u "{}" -w combined-results/unfurl-params.txt -X GET POST > x8-results-${{ matrix.chunk }}/x8.txt || true
-              fi
-            else
-              touch x8-results-${{ matrix.chunk }}/x8.txt
-            fi
-          else
-            touch x8-results-${{ matrix.chunk }}/x8.txt
-          fi
-
-  # Job 6: Run kxss (parallel)
-  kxss-scan:
-    needs: httpx-scan
-    runs-on: ubuntu-latest
-    # Check if the previous workflow run was successful
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    strategy:
-      matrix:
-        chunk: [1, 2, 3, 4, 5, 6]
-    steps:
-      - name: Download combined results
-        uses: actions/download-artifact@v4
-        with:
-          name: combined-results
-          path: combined-results/
-
-      - name: Download all httpx results
-        uses: actions/download-artifact@v4
-        with:
-          pattern: httpx-results-*
-          merge-multiple: true
-        continue-on-error: true
-
-      - name: Install kxss
-        run: |
-          go install github.com/Emoe/kxss@latest
-          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
-      - name: Generate kxss URLs and run scan
-        run: |
-          mkdir -p kxss-results-${{ matrix.chunk }}
-          export PATH=$PATH:$(go env GOPATH)/bin
-          find . -name "httpx-results-*" -type d -exec cat {}/*.txt \; | grep '?' | sort -u > dynamic-alive.txt || true
-
-          # Prepare URLs for kxss with parameters
-          if [[ -s "dynamic-alive.txt" ]] && [[ -s "combined-results/unfurl-params.txt" ]]; then
-            TOTAL_LINES=$(wc -l < dynamic-alive.txt)
-            LINES_PER_CHUNK=$((TOTAL_LINES / 6 + 1))
-            START_LINE=$((((${{ matrix.chunk }} - 1) * LINES_PER_CHUNK) + 1))
-            END_LINE=$((${{ matrix.chunk }} * LINES_PER_CHUNK))
-
-            sed -n "${START_LINE},${END_LINE}p" dynamic-alive.txt > kxss-urls-${{ matrix.chunk }}.txt
-
-            if [[ -s "kxss-urls-${{ matrix.chunk }}.txt" ]]; then
-              echo "Running kxss for chunk ${{ matrix.chunk }}..."
-              # Prepare input for kxss - combine URL with parameter
-              cat kxss-urls-${{ matrix.chunk }}.txt | httpx -silent -threads 30 -timeout 10 -retries 2 -status-code -follow-redirects -rate-limit 10 |
-              while IFS= read -r url; do
-                if [[ -f "combined-results/unfurl-params.txt" ]]; then
-                  while IFS= read -r param; do
-                    echo "$url?${param}=KXSS"
-                  done < combined-results/unfurl-params.txt
-                else
-                  echo "$url" # If no parameters found, just use the URL
-                fi
-              done | sort -u > kxss-urls-final-${{ matrix.chunk }}.txt
-
-              if [[ -s "kxss-urls-final-${{ matrix.chunk }}.txt" ]]; then
-                cat kxss-urls-final-${{ matrix.chunk }}.txt | kxss -timeout 300 -threads 50 > kxss-results-${{ matrix.chunk }}/kxss-output.txt || {
-                  echo "kxss scan failed for chunk ${{ matrix.chunk }}"
-                  touch kxss-results-${{ matrix.chunk }}/kxss-output.txt
-                }
-              else
-                touch kxss-results-${{ matrix.chunk }}/kxss-output.txt
-              fi
-            else
-              touch kxss-results-${{ matrix.chunk }}/kxss-output.txt
-            fi
-          else
-            touch kxss-results-${{ matrix.chunk }}/kxss-output.txt
-          fi
-          KXSS_COUNT=$(wc -l < kxss-results-${{ matrix.chunk }}/kxss-output.txt)
-          echo "kxss found $KXSS_COUNT results for chunk ${{ matrix.chunk }}"
-
-      - name: Upload kxss results
-        uses: actions/upload-artifact@v4
-        with:
-          name: kxss-results-${{ matrix.chunk }}
-          path: kxss-results-${{ matrix.chunk }}/
-
-  # Job 7: Final summary
-  final-summary:
-    needs: [start, httpx-scan, x8-scan, kxss-scan]
-    runs-on: ubuntu-latest
-    # Check if the previous workflow run was successful
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          # Grab all artifacts from previous jobs
-          pattern: 'combined-results*,httpx-results*,x8-results*,kxss-results*'
-          merge-multiple: true
-          path: downloaded-artifacts/
-
-      - name: Aggregate results and generate summary
-        run: |
-          echo "Aggregating results..."
-          mkdir -p final-results
-
-          # Aggregate httpx results
-          mkdir -p httpx-all-results
-          find downloaded-artifacts/ -name "httpx-results-*.zip" -exec unzip -n {} -d httpx-all-results/ \;
-          cat httpx-all-results/httpx.txt > final-results/httpx.txt || echo "No httpx results found."
-
-          # Aggregate x8 results
-          mkdir -p x8-all-results
-          find downloaded-artifacts/ -name "x8-results-*.zip" -exec unzip -n {} -d x8-all-results/ \;
-          cat x8-all-results/x8.txt > final-results/x8-brute.txt || echo "No x8 results found."
-
-          # Aggregate kxss results
-          mkdir -p kxss-all-results
-          find downloaded-artifacts/ -name "kxss-results-*.zip" -exec unzip -n {} -d kxss-all-results/ \;
-          cat kxss-all-results/kxss-output.txt > final-results/kxss-out.txt || echo "No kxss results found."
-
-          # Parse kxss output for reflected pairs
-          if [[ -f "downloaded-artifacts/kxss-results-1/kxss-output.txt" ]]; then
-            echo "Parsing kxss output for reflected parameters..."
-            # Assuming kxss output format is: URL | PARAM | Reflected: VALUE
-            grep -E '^.*\|.*=KXSS' downloaded-artifacts/kxss-results-*/kxss-output.txt | awk -F '|' '{gsub(/^[  ]+|[  ]+$/, "", $2); print $1 " | " $2}' | sort -u > final-results/kxss-reflected-pairs.txt
-          else
-            touch final-results/kxss-reflected-pairs.txt
-          fi
-
-          # Count various URL types
-          echo "Counting URLs..."
-          WAYBACK_COUNT=$(wc -l < downloaded-artifacts/waybackurls.txt || echo 0)
-          GAU_COUNT=$(wc -l < downloaded-artifacts/gau.txt || echo 0)
-          ALL_URLS_COUNT=$(wc -l < downloaded-artifacts/combined-results/all-urls.txt || echo 0)
-          STATIC_URLS_COUNT=$(wc -l < downloaded-artifacts/combined-results/static-urls.txt || echo 0)
-          DYNAMIC_URLS_COUNT=$(wc -l < downloaded-artifacts/combined-results/dynamic-urls.txt || echo 0)
-          UNFURL_PARAMS_COUNT=$(wc -l < downloaded-artifacts/combined-results/unfurl-params.txt || echo 0)
-          HTTPX_COUNT=$(wc -l < final-results/httpx.txt || echo 0)
-          X8_COUNT=$(wc -l < final-results/x8-brute.txt || echo 0)
-          KXSS_OUT_COUNT=$(wc -l < final-results/kxss-out.txt || echo 0)
-          KXSS_REFLECTED_COUNT=$(wc -l < final-results/kxss-reflected-pairs.txt || echo 0)
-
-          # Create final summary file
-          echo "Bug Bounty Recon Summary:" > final-results/FINAL_SUMMARY.txt
-          echo "=========================" >> final-results/FINAL_SUMMARY.txt
-          echo "" >> final-results/FINAL_SUMMARY.txt
-          echo "Target Domain: ${{ github.event.workflow_run.inputs.domain }}" >> final-results/FINAL_SUMMARY.txt
-          echo "Custom Headers: ${{ github.event.workflow_run.inputs.headers }}" >> final-results/FINAL_SUMMARY.txt
-          echo "" >> final-results/FINAL_SUMMARY.txt
-          echo "--- URL Gathering ---" >> final-results/FINAL_SUMMARY.txt
-          echo "Waybackurls found: $WAYBACK_COUNT URLs" >> final-results/FINAL_SUMMARY.txt
-          echo "GAU found: $GAU_COUNT URLs" >> final-results/FINAL_SUMMARY.txt
-          echo "Total URLs collected: $ALL_URLS_COUNT" >> final-results/FINAL_SUMMARY.txt
-          echo "Static URLs: $STATIC_URLS_COUNT" >> final-results/FINAL_SUMMARY.txt
-          echo "Dynamic URLs: $DYNAMIC_URLS_COUNT" >> final-results/FINAL_SUMMARY.txt
-          echo "Unique parameters found: $UNFURL_PARAMS_COUNT" >> final-results/FINAL_SUMMARY.txt
-          echo "" >> final-results/FINAL_SUMMARY.txt
-          echo "--- Scanning Results ---" >> final-results/FINAL_SUMMARY.txt
-          echo "httpx alive URLs: $HTTPX_COUNT" >> final-results/FINAL_SUMMARY.txt
-          echo "x8 parameter brute-force found: $X8_COUNT entries" >> final-results/FINAL_SUMMARY.txt
-          echo "kxss scan entries: $KXSS_OUT_COUNT" >> final-results/FINAL_SUMMARY.txt
-          echo "kxss reflected pairs found: $KXSS_REFLECTED_COUNT" >> final-results/FINAL_SUMMARY.txt
-          echo "" >> final-results/FINAL_SUMMARY.txt
-
-          # Display kxss reflected pairs if any
-          if [[ -s "final-results/kxss-reflected-pairs.txt" ]]; then
-            echo "--- Top 5 kxss Reflected Pairs ---" >> final-results/FINAL_SUMMARY.txt
-            head -n 5 final-results/kxss-reflected-pairs.txt >> final-results/FINAL_SUMMARY.txt
-            echo "----------------------------------" >> final-results/FINAL_SUMMARY.txt
-          else
-            echo "No kxss reflected pairs found." >> final-results/FINAL_SUMMARY.txt
-          fi
-
-          # Health Check: Check for '1.bigdav.ir' in kxss-reflected-pairs.txt
-          if grep -q "1.bigdav.ir" final-results/kxss-reflected-pairs.txt; then
-            echo "Health Check PASSED: '1.bigdav.ir' found in reflected pairs." >> final-results/FINAL_SUMMARY.txt
-          else
-            echo "Health Check FAILED: '1.bigdav.ir' not found in reflected pairs." >> final-results/FINAL_SUMMARY.txt
-          fi
-
-          # Copy results to final-results directory
-          cp downloaded-artifacts/waybackurls.txt final-results/waybackurls.txt
-          cp downloaded-artifacts/gau.txt final-results/gau.txt
-          cp downloaded-artifacts/combined-results/all-urls.txt final-results/all-urls.txt
-          cp downloaded-artifacts/combined-results/static-urls.txt final-results/static-urls.txt
-          cp downloaded-artifacts/combined-results/dynamic-urls.txt final-results/dynamic-urls.txt
-          cp downloaded-artifacts/combined-results/unfurl-params.txt final-results/unfurl-params.txt
-
-          echo "Summary generation complete. Results saved in final-results/"
-
-      - name: Upload final results artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ github.event.workflow_run.inputs.domain }}-scan-results
-          path: final-results/
-
