--- a/.github/workflows/xss-tools.yaml
+++ b/.github/workflows/xss-tools.yaml
@@ -14,7 +14,6 @@ on:
         type: string
 
 jobs:
-  # Job 1: Run httpx on dynamic URLs (parallel chunks)
   httpx-scan:
     runs-on: ubuntu-latest
     strategy:
@@ -40,16 +39,23 @@ jobs:
           echo "httpx location: $(which httpx || echo 'not found in PATH')"
           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
-      - name: Run httpx on chunk
+      - name: Run httpx on chunk (with debug)
         run: |
           mkdir -p httpx-results-${{ matrix.chunk }}
           export PATH=$PATH:$(go env GOPATH)/bin
+          echo "==== [httpx debug] combined-results/dynamic-urls.txt ===="
+          ls -lh combined-results/ || true
+          wc -l combined-results/dynamic-urls.txt || true
+          head -10 combined-results/dynamic-urls.txt || true
           if [[ -f "combined-results/dynamic-urls.txt" ]] && [[ -s "combined-results/dynamic-urls.txt" ]]; then
             TOTAL_LINES=$(wc -l < combined-results/dynamic-urls.txt)
             LINES_PER_CHUNK=$((TOTAL_LINES / 8 + 1))
             START_LINE=$((((${{ matrix.chunk }} - 1) * LINES_PER_CHUNK) + 1))
             END_LINE=$((${{ matrix.chunk }} * LINES_PER_CHUNK))
             sed -n "${START_LINE},${END_LINE}p" combined-results/dynamic-urls.txt > chunk-${{ matrix.chunk }}.txt
+            echo "==== [httpx debug] chunk-${{ matrix.chunk }}.txt ===="
+            wc -l chunk-${{ matrix.chunk }}.txt || true
+            head -10 chunk-${{ matrix.chunk }}.txt || true
             if [[ -s "chunk-${{ matrix.chunk }}.txt" ]]; then
               echo "Processing chunk ${{ matrix.chunk }} with $(wc -l < chunk-${{ matrix.chunk }}.txt) URLs"
               cat chunk-${{ matrix.chunk }}.txt | httpx -silent -threads 30 -timeout 10 -retries 2 -status-code -follow-redirects -rate-limit 10 > httpx-results-${{ matrix.chunk }}/httpx.txt || {
@@ -62,6 +68,9 @@ jobs:
           else
             touch httpx-results-${{ matrix.chunk }}/httpx.txt
           fi
+          echo "==== [httpx debug] Output httpx-results-${{ matrix.chunk }}/httpx.txt ===="
+          wc -l httpx-results-${{ matrix.chunk }}/httpx.txt || true
+          head -10 httpx-results-${{ matrix.chunk }}/httpx.txt || true
           ALIVE_COUNT=$(wc -l < httpx-results-${{ matrix.chunk }}/httpx.txt)
           echo "Chunk ${{ matrix.chunk }} found $ALIVE_COUNT alive URLs"
 
@@ -71,7 +80,6 @@ jobs:
           path: httpx-results-${{ matrix.chunk }}/
           key: httpx-results-${{ matrix.chunk }}-${{ inputs.run_id }}
 
-  # Job 2: Run x8 parameter bruteforce (parallel)
   x8-scan:
     needs: httpx-scan
     runs-on: ubuntu-latest
@@ -106,7 +114,6 @@ jobs:
               echo "Building from source failed. Creating a fallback script..."
             fi
           fi
-          # Corrected fallback script using simplified echo commands and proper chmod
           echo '#!/bin/bash' > /usr/local/bin/x8_fallback.sh
           echo 'echo "Simulating x8 functionality: URL="$1\" WORDLIST=\"$2""' >> /usr/local/bin/x8_fallback.sh
           echo 'echo "Error: Fallback script executed. Real x8 not found. Please check installation."' >> /usr/local/bin/x8_fallback.sh
@@ -119,16 +126,28 @@ jobs:
             echo "x8 found in PATH."
           fi
 
-      - name: Combine httpx results and run x8
+      - name: Combine httpx results and run x8 (with debug)
         run: |
           mkdir -p x8-results-${{ matrix.chunk }}
           find . -name "httpx-results-*" -type d -exec cat {}/*.txt \; | grep '?' | sort -u > dynamic-alive.txt || true
+          echo "---- [x8 debug] dynamic-alive.txt ----"
+          wc -l dynamic-alive.txt || true
+          head -10 dynamic-alive.txt || true
+          echo "---- [x8 debug] combined-results/unfurl-params.txt ----"
+          wc -l combined-results/unfurl-params.txt || true
+          head -10 combined-results/unfurl-params.txt || true
+
           if [[ -s "dynamic-alive.txt" ]] && [[ -s "combined-results/unfurl-params.txt" ]]; then
             TOTAL_LINES=$(wc -l < dynamic-alive.txt)
             LINES_PER_CHUNK=$((TOTAL_LINES / 4 + 1))
             START_LINE=$((((${{ matrix.chunk }} - 1) * LINES_PER_CHUNK) + 1))
             END_LINE=$((${{ matrix.chunk }} * LINES_PER_CHUNK))
             sed -n "${START_LINE},${END_LINE}p" dynamic-alive.txt > x8-chunk-${{ matrix.chunk }}.txt
+
+            echo "---- [x8 debug] x8-chunk-${{ matrix.chunk }}.txt ----"
+            wc -l x8-chunk-${{ matrix.chunk }}.txt || true
+            head -10 x8-chunk-${{ matrix.chunk }}.txt || true
+
             if [[ -s "x8-chunk-${{ matrix.chunk }}.txt" ]]; then
               if [[ -n "${{ inputs.headers }}" ]]; then
                 cat x8-chunk-${{ matrix.chunk }}.txt | xargs -P 4 -I{} x8 -u "{}" -w combined-results/unfurl-params.txt -X GET POST -H "${{ inputs.headers }}" > x8-results-${{ matrix.chunk }}/x8.txt || true
@@ -136,11 +155,17 @@ jobs:
                 cat x8-chunk-${{ matrix.chunk }}.txt | xargs -P 4 -I{} x8 -u "{}" -w combined-results/unfurl-params.txt -X GET POST > x8-results-${{ matrix.chunk }}/x8.txt || true
               fi
             else
+              echo "---- [x8 debug] x8-chunk-${{ matrix.chunk }}.txt is empty; skipping x8 ----"
               touch x8-results-${{ matrix.chunk }}/x8.txt
             fi
           else
+            echo "---- [x8 debug] upstream input missing; skipping x8 ----"
             touch x8-results-${{ matrix.chunk }}/x8.txt
           fi
+
+          echo "---- [x8 debug] Output x8-results-${{ matrix.chunk }}/x8.txt ----"
+          wc -l x8-results-${{ matrix.chunk }}/x8.txt || true
+          head -10 x8-results-${{ matrix.chunk }}/x8.txt || true
 
       - name: Cache x8 results
         uses: actions/cache@v4
@@ -148,7 +173,6 @@ jobs:
           path: x8-results-${{ matrix.chunk }}/
           key: x8-results-${{ matrix.chunk }}-${{ inputs.run_id }}
 
-  # Job 3: Run kxss (parallel)
   kxss-scan:
     needs: httpx-scan
     runs-on: ubuntu-latest
@@ -177,24 +201,31 @@ jobs:
           go install github.com/Emoe/kxss@latest
           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
-      - name: Generate kxss URLs and run scan
+      - name: Generate kxss URLs and run scan (with debug)
         run: |
           mkdir -p kxss-results-${{ matrix.chunk }}
           export PATH=$PATH:$(go env GOPATH)/bin
           find . -name "httpx-results-*" -type d -exec cat {}/*.txt \; | grep '?' | sort -u > dynamic-alive.txt || true
+          echo "---- [kxss debug] dynamic-alive.txt ----"
+          wc -l dynamic-alive.txt || true
+          head -10 dynamic-alive.txt || true
+          echo "---- [kxss debug] combined-results/unfurl-params.txt ----"
+          wc -l combined-results/unfurl-params.txt || true
+          head -10 combined-results/unfurl-params.txt || true
 
-          # Prepare URLs for kxss with parameters
           if [[ -s "dynamic-alive.txt" ]] && [[ -s "combined-results/unfurl-params.txt" ]]; then
             TOTAL_LINES=$(wc -l < dynamic-alive.txt)
             LINES_PER_CHUNK=$((TOTAL_LINES / 6 + 1))
             START_LINE=$((((${{ matrix.chunk }} - 1) * LINES_PER_CHUNK) + 1))
             END_LINE=$((${{ matrix.chunk }} * LINES_PER_CHUNK))
-
             sed -n "${START_LINE},${END_LINE}p" dynamic-alive.txt > kxss-urls-${{ matrix.chunk }}.txt
+
+            echo "---- [kxss debug] kxss-urls-${{ matrix.chunk }}.txt ----"
+            wc -l kxss-urls-${{ matrix.chunk }}.txt || true
+            head -10 kxss-urls-${{ matrix.chunk }}.txt || true
 
             if [[ -s "kxss-urls-${{ matrix.chunk }}.txt" ]]; then
               echo "Running kxss for chunk ${{ matrix.chunk }}..."
-              # Prepare input for kxss - combine URL with parameter
               cat kxss-urls-${{ matrix.chunk }}.txt | httpx -silent -threads 30 -timeout 10 -retries 2 -status-code -follow-redirects -rate-limit 10 |
               while IFS= read -r url; do
                 if [[ -f "combined-results/unfurl-params.txt" ]]; then
@@ -202,9 +233,13 @@ jobs:
                     echo "$url?${param}=KXSS"
                   done < combined-results/unfurl-params.txt
                 else
-                  echo "$url" # If no parameters found, just use the URL
+                  echo "$url"
                 fi
               done | sort -u > kxss-urls-final-${{ matrix.chunk }}.txt
+
+              echo "---- [kxss debug] kxss-urls-final-${{ matrix.chunk }}.txt ----"
+              wc -l kxss-urls-final-${{ matrix.chunk }}.txt || true
+              head -10 kxss-urls-final-${{ matrix.chunk }}.txt || true
 
               if [[ -s "kxss-urls-final-${{ matrix.chunk }}.txt" ]]; then
                 cat kxss-urls-final-${{ matrix.chunk }}.txt | kxss -timeout 300 -threads 50 > kxss-results-${{ matrix.chunk }}/kxss-output.txt || {
@@ -212,16 +247,21 @@ jobs:
                   touch kxss-results-${{ matrix.chunk }}/kxss-output.txt
                 }
               else
+                echo "---- [kxss debug] kxss-urls-final is empty; skipping kxss ----"
                 touch kxss-results-${{ matrix.chunk }}/kxss-output.txt
               fi
             else
+              echo "---- [kxss debug] kxss-urls-${{ matrix.chunk }}.txt is empty; skipping kxss ----"
               touch kxss-results-${{ matrix.chunk }}/kxss-output.txt
             fi
           else
+            echo "---- [kxss debug] upstream input missing; skipping kxss ----"
             touch kxss-results-${{ matrix.chunk }}/kxss-output.txt
           fi
-          KXSS_COUNT=$(wc -l < kxss-results-${{ matrix.chunk }}/kxss-output.txt)
-          echo "kxss found $KXSS_COUNT results for chunk ${{ matrix.chunk }}"
+
+          echo "---- [kxss debug] Output kxss-results-${{ matrix.chunk }}/kxss-output.txt ----"
+          wc -l kxss-results-${{ matrix.chunk }}/kxss-output.txt || true
+          head -10 kxss-results-${{ matrix.chunk }}/kxss-output.txt || true
 
       - name: Cache kxss results
         uses: actions/cache@v4
